main.css
html, body {
    height: 100%;
}

.home {
    height: 100%;
    &::before {
        content: "";  
        background-image: url('images/dubai.jpg');
        background-size: cover;
        position: absolute;
        top: 0px;
        right: 0px;
        bottom: 0px;
        left: 0px;
        opacity: 0.60;
    }
} 

.else {
    position: relative;
}

#nav {
    position: fixed;
    width: 100%;
    transition: background-color 0.8s ease-out;
    display: flex;
    justify-content: space-between ;
    padding: 15px;
    font-size: 18px;
    opacity: 0.1;
    color: white;
    text-transform: uppercase;
}

#nav.scroll {
    background-color: white;
    font-size: 15px;
    color: rgb(33, 156, 239);
    opacity: 1;
    max-height: 50px;
}

a {
    font-weight: bold;
    color: white;
    text-decoration: none;
}

a.scroll {
    color: rgb(33, 156, 239);
    opacity: 1;
}

.dropdown:hover .drop-links {
    display: block;
}

.drop-links {
    display: none;
    font-size: 16px;
    padding-top: 20px;
}

.drop-links a {
    display: block;
    color: black
}

.drop-links a:hover {
    color: white;
}

.drop-links a:hover.scroll {
    background-color: #ddd;
}

#drop1.scroll {
    color: black;
    font-size: 13px;
}

#drop2.scroll {
    color: black;
    font-size: 13px;
}

#i.scroll {
    color: black;
}

#i:hover.scroll {
    color: rgb(33, 156, 239);
}

.intro {
    height: 945px;
}

h1 {
    width: 600px;
}

.intro-text {
    font-size: 75px;
    font-weight: bold;
}

.line {
    border-bottom: solid rgb(33, 156, 239);
    border-width: 3px;
    width: 50px;
    margin-left: 235px;
}

p {
    font-size: 19px;
}

.intro-subtext {
    width: 600px;
}

.more-button {
    background-color: rgb(33, 156, 239);
    border: none;
    color: white;
    padding: 13px 25px;
    text-align: center;
    cursor: pointer;
    border-radius: 36px;
    font-weight: bold;
    font-size: 15px;
}

.more-button:hover {
    background-color: white;
    color: black;
}

.about {
    height: 880px;
    background-color: rgb(33, 156, 239);
    color: white;
}

.line2 {
    border-bottom: solid black;
    border-width: 3px;
    width: 50px;
    margin-left: 1095px;
}

.about-text {
    font-size: 18px;
}

.resume-button {
    background-color: white;
    border: none;
    color: black;
    padding: 13px 25px;
    text-align: center;
    cursor: pointer;
    border-radius: 36px;
    font-weight: bold;
    font-size: 15px;
    margin-right: 15px;
}

.resume-button:hover {
    background-color: black;
    color: white;
}

.projects {
    height: 880px;
    background-color: white;
}

.contact {
    height: 718px;
    background-color: rgb(33, 156, 239);
    color: white;
    padding: 70px;
}

form {
    padding: 35px;
}

.name {
    float: left;
    margin-right: 20px;
}

.name2 {
    min-width: 230px;
}

input[type=text] {
    border: 3px solid #ddd;
    padding: 8px;
    outline: none;
    margin: 1px;
}

input[type=text]:focus {
    border: 3px solid black;
}

label, input {
    display: block;
    font-weight: 500;
}

.email {
    float: left;
}

.email2 {
    min-width: 230px; 
}

.message {
    min-height: 200px;
    min-width: 430px;
}

.form-button {
    background-color: white;
    border: none;
    color: black;
    padding: 13px 25px;
    text-align: center;
    cursor: pointer;
    border-radius: 36px;
    font-weight: bold;
    font-size: 15px;
    margin-right: 15px;
}

.form-button:hover {
    background-color: black;
    color: white;
}

footer {
    height: 162px;
    display: flex;
    justify-content: center;
}

.linkedin {
    color: black;
    font-size: 50px;
    padding-top: 60px;
}

.linkedin:hover {
    color: rgb(33, 156, 239);
}

.github {
    color: black;
    font-size: 50px;
    padding-top: 60px;
    padding-left: 100px;
}

.github:hover {
    color: rgb(33, 156, 239);
}

